--- a/roles/gamecreditsd/templates/gamecredits.conf
+++ b/roles/gamecreditsd/templates/gamecredits.conf
@@ -1,2 +1,2 @@
-rpcuser={{ rpc_user }}
-rpcpassword={{ rpc_password }}
+rpcuser='gamecreditsrpc'
+rpcpassword='BsCihuKZxUwMgWtFZoaGDioMqi5nBrxy8xxAj9aC1S7D'
